--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ Variables
   --max-width: 1170px;
   --fixed-width: 620px;
 }
+
 /*
 =============== 
 Global Styles
@@ -59,6 +60,7 @@ Global Styles
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -67,12 +69,15 @@ body {
   line-height: 1.5;
   font-size: 0.875rem;
 }
+
 ul {
   list-style-type: none;
 }
+
 a {
   text-decoration: none;
 }
+
 h1,
 h2,
 h3,
@@ -83,38 +88,49 @@ h4 {
   margin-bottom: 0.75rem;
   font-weight: 400;
 }
+
 h1 {
   font-size: 3rem;
 }
+
 h2 {
   font-size: 2rem;
 }
+
 h3 {
   font-size: 1.25rem;
 }
+
 h4 {
   font-size: 0.875rem;
 }
+
 p {
   margin-bottom: 1.25rem;
   color: var(--clr-grey-5);
 }
+
 @media screen and (min-width: 800px) {
   h1 {
     font-size: 4rem;
   }
+
   h2 {
     font-size: 2.5rem;
   }
+
   h3 {
     font-size: 1.75rem;
   }
+
   h4 {
     font-size: 1rem;
   }
+
   body {
     font-size: 1rem;
   }
+
   h1,
   h2,
   h3,
@@ -122,10 +138,12 @@ p {
     line-height: 1;
   }
 }
+
 .img {
   width: 100%;
   display: block;
 }
+
 .text-slanted {
   font-family: 'Helvetica Neue', cursive;
   margin-bottom: 4.75rem;
@@ -137,9 +155,11 @@ p {
   max-width: var(--max-width);
   margin: 0 auto;
 }
+
 .section {
   padding: 5rem 0;
 }
+
 .btn {
   background: var(--clr-primary-5);
   color: var(--clr-white);
@@ -152,10 +172,12 @@ p {
   border-color: transparent;
   cursor: pointer;
 }
+
 .btn:hover {
   background: var(--clr-primary-7);
   color: var(--clr-black);
 }
+
 .section-loading {
   text-align: center;
   position: absolute;
@@ -164,6 +186,7 @@ p {
   transform: translate(-50%, -50%);
   text-align: center;
 }
+
 .page-loading {
   position: fixed;
   top: 0;
@@ -175,6 +198,7 @@ p {
   align-items: center;
   justify-content: center;
 }
+
 /*
 =============== 
 Navbar
@@ -196,9 +220,11 @@ Navbar
   justify-content: space-between;
   align-items: center;
 }
+
 .nav-links {
   display: none;
 }
+
 .toggle-nav {
   background: var(--clr-primary-5);
   border-color: transparent;
@@ -213,13 +239,16 @@ Navbar
   cursor: pointer;
   transition: var(--transition);
 }
+
 .toggle-nav:hover {
   background: var(--clr-primary-3);
 }
+
 .toggle-container {
   position: relative;
   margin-top: 0.75rem;
 }
+
 .toggle-cart {
   background: transparent;
   border-color: transparent;
@@ -227,6 +256,7 @@ Navbar
   color: var(--clr-white);
   cursor: pointer;
 }
+
 .cart-item-count {
   position: absolute;
   top: -0.85rem;
@@ -241,24 +271,29 @@ Navbar
   font-weight: bold;
   font-size: 1rem;
 }
+
 @media screen and (min-width: 800px) {
   .nav-center {
     position: relative;
   }
+
   .nav-logo {
     position: absolute;
     top: 50%;
     left: 65%;
     transform: translate(-50%, -50%);
   }
+
   .toggle-nav {
     display: none;
   }
+
   .nav-links {
     display: flex;
     font-size: 1.5rem;
     text-transform: capitalize;
   }
+
   .nav-link {
     color: var(--clr-white);
     margin-right: 3rem;
@@ -266,15 +301,18 @@ Navbar
     transition: var(--transition);
     font-size: 1.25rem;
   }
+
   .nav-link:hover {
     color: var(--clr-primary-5);
   }
 }
+
 @media screen and (min-width: 992px) {
   .nav-logo {
     left: 50%;
   }
 }
+
 .logo-text {
   font-family: 'Kaushan Script';
   color: white;
@@ -285,16 +323,20 @@ Navbar
 #logo-black {
   color: black;
 }
+
 /* page navbar */
 .page .nav-link {
   color: var(--clr-grey-1);
 }
+
 .page .nav-link:hover {
   color: var(--clr-primary-5);
 }
+
 .page .toggle-cart {
   color: var(--clr-grey-1);
 }
+
 /*
 =============== 
 Hero
@@ -309,17 +351,21 @@ Hero
   place-items: center;
   color: var(--clr-white);
 }
+
 .hero-container {
   width: 90vw;
   max-width: var(--max-width);
 }
+
 .hero h1 {
   font-weight: 700;
 }
+
 .hero h3 {
   text-transform: none;
   font-size: 1.5rem;
 }
+
 .hero-btn {
   color: var(--clr-white);
   background: transparent;
@@ -332,6 +378,7 @@ Hero
   border-radius: var(--radius);
   transition: var(--transition);
 }
+
 .hero-btn:hover {
   background: var(--clr-white);
   color: var(--clr-primary-5);
@@ -349,6 +396,7 @@ Hero
     font-size: 5.25rem;
     letter-spacing: 2px;
   }
+
   .hero h3 {
     font-size: 2.75rem;
     margin: 1.5rem 0;
@@ -373,10 +421,12 @@ Sidebar
   opacity: 0;
   background: rgba(0, 0, 0, 0.5);
 }
+
 .sidebar-overlay.show {
   opacity: 1;
   z-index: 100;
 }
+
 .sidebar {
   width: 90vw;
   height: 95vh;
@@ -388,9 +438,11 @@ Sidebar
   padding: 4rem;
   transform: scale(0);
 }
+
 .show .sidebar {
   transform: scale(1);
 }
+
 .sidebar-close {
   font-size: 2rem;
   background: transparent;
@@ -401,21 +453,25 @@ Sidebar
   right: 1rem;
   cursor: pointer;
 }
+
 .sidebar-link {
   font-size: 1.5rem;
   text-transform: capitalize;
   color: var(--clr-grey-1);
 }
+
 .sidebar-link i {
   color: var(--clr-grey-5);
   margin-right: 1rem;
   margin-bottom: 1rem;
 }
+
 @media screen and (min-width: 800px) {
   .sidebar-overlay {
     display: none;
   }
 }
+
 /*
 =============== 
 Cart
@@ -432,10 +488,12 @@ Cart
   opacity: 0;
   z-index: -1;
 }
+
 .cart-overlay.show {
   opacity: 1;
   z-index: 100;
 }
+
 .cart {
   position: fixed;
   top: 0;
@@ -451,9 +509,11 @@ Cart
   transform: translateX(100%);
   overflow: scroll;
 }
+
 .show .cart {
   transform: translateX(0);
 }
+
 .cart-close {
   font-size: 2rem;
   background: transparent;
@@ -464,23 +524,28 @@ Cart
   left: 1rem;
   cursor: pointer;
 }
+
 .cart header {
   text-align: center;
 }
+
 .cart header h3 {
   font-weight: 500;
 }
+
 .cart-total {
   text-align: center;
   margin-bottom: 2rem;
   font-weight: 500;
 }
+
 .cart-checkout {
   display: block;
   width: 75%;
   margin: 0 auto;
   margin-bottom: 3rem;
 }
+
 /* cart item */
 .cart-item {
   margin: 1rem 0;
@@ -490,20 +555,24 @@ Cart
   column-gap: 1.5rem;
   align-items: center;
 }
+
 .cart-item-img {
   width: 75px;
   height: 80px;
   object-fit: cover;
   border-radius: var(--radius);
 }
+
 .cart-item-name {
   margin-bottom: 0.15rem;
 }
+
 .cart-item-price {
   margin-bottom: 0;
   font-size: 0.75rem;
   color: var(--clr-grey-3);
 }
+
 .cart-item-remove-btn {
   background: transparent;
   border-color: transparent;
@@ -511,12 +580,14 @@ Cart
   letter-spacing: var(--spacing);
   cursor: pointer;
 }
+
 .cart-item-amount {
   margin-bottom: 0;
   text-align: center;
   color: var(--clr-grey-3);
   line-height: 1;
 }
+
 .cart-item-increase-btn,
 .cart-item-decrease-btn {
   background: transparent;
@@ -526,6 +597,7 @@ Cart
   font-size: 0.85rem;
   padding: 0.25rem;
 }
+
 /*
 =============== 
 Title
@@ -538,11 +610,13 @@ Title
   align-items: center;
   font-weight: 500;
 }
+
 .title span {
   color: var(--clr-primary-5);
   font-size: 0.85em;
   margin-right: 1rem;
 }
+
 /*
 =============== 
 product
@@ -553,9 +627,11 @@ product
   object-fit: cover;
   border-radius: var(--radius);
 }
+
 .product-container {
   position: relative;
 }
+
 .product-icons {
   position: absolute;
   top: 50%;
@@ -565,6 +641,7 @@ product
   display: flex;
   transition: var(--transition);
 }
+
 .product-icon {
   width: 2.25rem;
   height: 2.25rem;
@@ -579,21 +656,26 @@ product
   border-color: transparent;
   margin: 0 0.5rem;
 }
+
 .product-icon:hover {
   background: var(--clr-primary-7);
 }
+
 .product-container:hover .product-icons {
   opacity: 1;
 }
+
 .product footer {
   padding: 0.75rem 0;
   text-align: center;
 }
+
 .product-name {
   margin-bottom: 0.25rem;
   text-transform: capitalize;
   letter-spacing: var(--spacing);
 }
+
 .product-price {
   margin-bottom: 0;
   color: var(--clr-grey-3);
@@ -607,27 +689,32 @@ product
   min-height: 6rem;
   position: relative;
 }
+
 .featured .btn {
   display: block;
   width: 11rem;
   margin: 0 auto;
   text-align: center;
 }
+
 @media screen and (min-width: 992px) {
   .featured-center {
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
 }
+
 @media screen and (min-width: 1200px) {
   .featured-center {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
   }
+
   .product .img {
     height: 13rem;
   }
 }
+
 /*
 =============== 
 About Page
@@ -653,10 +740,12 @@ Products Page
   max-width: var(--max-width);
   position: relative;
 }
+
 .filters-container {
   position: sticky;
   top: 1rem;
 }
+
 .filters h4 {
   font-weight: 500;
   margin: 1.5rem 0 0.5rem;
@@ -669,9 +758,11 @@ Products Page
   border-color: transparent;
   letter-spacing: var(--spacing);
 }
+
 .search-input::placeholder {
   text-transform: capitalize;
 }
+
 .company-btn {
   display: block;
   margin: 0.25em 0;
@@ -684,43 +775,53 @@ Products Page
   cursor: pointer;
   transition: var(--transition);
 }
+
 .company-btn:hover {
   color: var(--clr-grey-3);
 }
+
 .price-filter {
   background: var(--clr-grey-5) !important;
   color: var(--clr-grey-5);
 }
+
 @media screen and (min-width: 768px) {
   .products {
     grid-template-columns: 200px 1fr;
   }
+
   .categories {
     position: sticky;
     top: 1rem;
   }
 }
+
 @media screen and (min-width: 992px) {
   .products-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 1rem;
   }
+
   .products-container .product-img {
     height: 19rem;
   }
+
   .products-container .product-name {
     font-size: 0.85rem;
   }
+
   .products-container .product-price {
     font-size: 0.85rem;
   }
 }
+
 @media screen and (min-width: 1170px) {
   .products-container {
     grid-template-columns: repeat(3, 1fr);
   }
 }
+
 .filter-error {
   position: absolute;
   top: 5rem;
@@ -729,6 +830,7 @@ Products Page
   text-align: center;
   margin-top: 4rem;
 }
+
 /*
 =============== 
 Single Product Page
@@ -741,23 +843,28 @@ Single Product Page
   background: var(--clr-grey-10);
   color: var(--clr-grey-5);
 }
+
 .page-hero-title {
   font-weight: 500;
 }
+
 .single-product {
   padding: 2rem 0;
 }
+
 .single-product-center {
   margin: 2rem auto;
   display: grid;
   gap: 1rem 2rem;
 }
+
 .single-product-img {
   height: 24rem;
   width: 18rem;
   border-radius: var(--radius);
   object-fit: cover;
 }
+
 .single-product-company {
   font-size: 1.2rem;
   color: var(--clr-grey-8);
@@ -765,6 +872,7 @@ Single Product Page
   letter-spacing: var(--spacing);
   margin-bottom: 1.25rem;
 }
+
 .single-product-price {
   color: var(--clr-grey-3);
   font-size: 1.25rem;
@@ -791,4 +899,100 @@ Single Product Page
   .single-product-center {
     grid-template-columns: 1fr 1fr;
   }
+}
+
+/*
+==============
+Login 
+==============
+*/
+
+@import url(https://fonts.googleapis.com/css?family=Roboto:300);
+
+.login-page {
+  width: 360px;
+  padding: 8% 0 0;
+  margin: auto;
+}
+.form {
+  background: #ffffff;
+  max-width: 460px;
+  margin: auto;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  padding: 45px;
+  text-align: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+
+.form h2 {
+  margin-bottom: 50px;
+  font-size: 30px;
+}
+
+.form input {
+  font-family: "Roboto", sans-serif;
+  outline: 0;
+  background: #f2f2f2;
+  width: 100%;
+  height: 50px;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+}
+.form textarea {
+  border: 1px solid rgb(206, 206, 206);
+  width: 99%;
+  max-width: 99%;
+  min-width: 99%;
+  min-height: 50px;
+  margin-bottom: 10px;
+  background-color: rgb(242, 242, 242);
+}
+.form button {
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  outline: 0;
+  background: hsl(21, 62%, 45%);
+  width: 100%;
+  border: 0;
+  padding: 15px;
+  color: #ffffff;
+  font-size: 14px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
+}
+.form button:hover,
+.form button:active,
+.form button:focus {
+  background: #5c9596;
+}
+
+.form .register-form {
+  display: none;
+}
+.container {
+  position: relative;
+  z-index: 1;
+  max-width: 300px;
+  margin: 0 auto;
+}
+.container:before,
+.container:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.form .message {
+  margin: 15px 0 0;
+  color: #b3b3b3;
+  font-size: 17px;
+}
+.form .message a {
+  color: #5c9596;
+  text-decoration: none;
 }
