order / your order functionality added

--- a/styles.css
+++ b/styles.css
@@ -805,7 +805,7 @@ Products Page
   }
 
   .products-container .product-img {
-    height: 19rem;
+    height: 31rem;
   }
 
   .products-container .product-name {
@@ -996,4 +996,45 @@ Login
 .form .message a {
   color: #5c9596;
   text-decoration: none;
+}
+
+/* Notifications */
+
+#notifications {
+  float: right;
+  position: absolute;
+  top: 0;
+  right: 0;
+  text-align: center;
+  margin: 1em;
+}
+
+.notification {
+  font-size: 1.5em;
+  color: #ffffff;
+  display: none;
+  text-align: right;
+  position: fixed;
+  top: 15%;
+  right: 37%;
+}
+
+.notification>span {
+  display: inline-block;
+  padding:  0.5em 2em 0.5em 2em;
+  border-radius: 10px;
+}
+
+#errorBox>span {
+  background: #F50;
+}
+
+.order {
+  padding-left: 175px;
+}
+.orders {
+    color: var(--clr-grey-5);
+    height: 33px;
+    margin: 7px;
+    margin-top: 35px;
 }
